# Atomes-GNU

./: .README.md.swp  .atomes.spec.swp  .contributing.md.swp  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  atomes-completion.sh  atomes.desktop  atomes.desktop.in  atomes.spec  codemeta.json  config.h.in  configure  configure.ac  contributing.md  fr.ipcms.atomes.atomes.metainfo.xml  fr.ipcms.atomes.metainfo.xml  lic  main.c
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: Makefile.am  Makefile.in
libs/: Makefile.in
metadata/: atomes-mime.xml  atomes.desktop  fr.ipcms.atomes.appdata.xml
misc/macos/: atomes.sh
misc/win/: atomes.rc  atomes.rc.in
opengl-testing/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  atomes.rc  atomes.rc.in
src/gui/: .gui.c.swp  interface.c  main.c
src/startup-testing/: Makefile.am  Makefile.in
src/workspace/: atomes-doxygen.cfg
startup-testing/: Makefile.am  Makefile.in
